# krupy

./: .envrc  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  KrupySample.yml  README.md  devtasks.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: doc-site-publish.yaml  publish.yaml  python-package-publish.yml  python-package.yml
changelog/: index.html
comparisons/: index.html
configuring/: index.html
contributing/: index.html
creating/: index.html
docs/: comparisons.md  configuring.md  creating.md  faq.md  generating.md  index.html  updating.md
docs/reference/krupy/: cli.md  errors.md  main.md  subproject.md  template.md  tools.md  types.md  user_data.md  vcs.md
docs/reference/questionary/: form.md  prompt.md  question.md  quickstart.md
docs/reference/questionary/prompts/: autocomplete.md  checkbox.md  common.md  confirm.md  password.md  path.md  press_any_key_to_continue.md  rawselect.md  select.md  text.md
faq/: index.html
generating/: index.html
krupy/: __init__.py  __main__.py  cli.py  constants.py  errors.py  main.py  subproject.py  template.py  tools.py  types.py  user_data.py  vcs.py
krupy/questionary/: __init__.py  constants.py  form.py  question.py  styles.py
krupy/questionary/prompts/: __init__.py  autocomplete.py  checkbox.py  common.py  confirm.py  password.py  path.py  press_any_key_to_continue.py  rawselect.py  select.py  text.py
reference/krupy/cli/: index.html
reference/krupy/errors/: index.html
reference/krupy/main/: index.html
reference/krupy/subproject/: index.html
reference/krupy/template/: index.html
reference/krupy/tools/: index.html
reference/krupy/types/: index.html
reference/krupy/user_data/: index.html
reference/krupy/vcs/: index.html
reference/questionary/form/: index.html
reference/questionary/prompt/: index.html
reference/questionary/prompts/autocomplete/: index.html
reference/questionary/prompts/checkbox/: index.html
reference/questionary/prompts/common/: index.html
reference/questionary/prompts/confirm/: index.html
reference/questionary/prompts/password/: index.html
reference/questionary/prompts/path/: index.html
reference/questionary/prompts/press_any_key_to_continue/: index.html
reference/questionary/prompts/rawselect/: index.html
reference/questionary/prompts/select/: index.html
reference/questionary/prompts/text/: index.html
reference/questionary/question/: index.html
reference/questionary/quickstart/: index.html
search/: search_index.json
site/: 404.html  objects.inv  sitemap.xml
site/comparisons/: index.html
site/configuring/: index.html
site/contributing/: index.html
site/creating/: index.html
site/reference/krupy/errors/: index.html
site/reference/krupy/main/: index.html
site/reference/krupy/subproject/: index.html
site/reference/krupy/template/: index.html
site/reference/krupy/tools/: index.html
site/reference/krupy/user_data/: index.html
site/reference/krupy/vcs/: index.html
site/reference/questionary/form/: index.html
site/reference/questionary/prompt/: index.html
site/reference/questionary/prompts/autocomplete/: index.html
site/reference/questionary/prompts/checkbox/: index.html
site/reference/questionary/prompts/confirm/: index.html
site/reference/questionary/prompts/password/: index.html
site/reference/questionary/prompts/press_any_key_to_continue/: index.html
site/reference/questionary/prompts/rawselect/: index.html
site/reference/questionary/prompts/text/: index.html
site/reference/questionary/question/: index.html
site/reference/questionary/quickstart/: index.html
site/search/: search_index.json
site/updating/: index.html
tests/: conftest.py  helpers.py  test_answersfile.py  test_answersfile_templating.py  test_cleanup.py  test_cli.py  test_complex_questions.py  test_conditional_file_name.py  test_config.py  test_copy.py  test_demo_update_tasks.py  test_dirty_local.py  test_empty_suffix.py  test_exclude.py  test_imports.py  test_interrupts.py  test_jinja2_extensions.py  test_migrations.py  test_minimum_version.py  test_normal_jinja2.py  test_output.py  test_prompt.py  test_recopy.py  test_subdirectory.py  test_symlinks.py  test_tasks.py  test_templated_prompt.py  test_tmpdir.py  test_tools.py  test_unsafe.py  test_updatediff.py  test_vcs.py
tests/demo/: pyproject.toml.tmpl
tests/demo_migrations/: [[ _krupy_conf.answers_file ]].tmpl  krupy.yaml
tests/demo_transclude_invalid/demo/: krupy.yml
tests/questionary/: test_examples.py  test_form.py  test_prompt.py  test_question.py  test_utils.py  utils.py
tests/questionary/prompts/: test_autocomplete.py  test_checkbox.py  test_common.py  test_confirm.py  test_password.py  test_path.py  test_press_any_key_to_continue.py  test_rawselect.py  test_select.py  test_text.py
tests/reference_files/: pyproject.toml
updating/: index.html
