[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Krupy"
version = "2.0.0"
description = "A library for rendering projects templates"
license = "MIT"

readme = "README.md"
homepage = "https://github.com/Krunal-Kevadiya/krupy"

# Requirements
[tool.poetry.dependencies]
python = "^3.6"
